--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=NOTEably
 
 #Setup JDBC connection – this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/ noteably
-
+spring.datasource.url=jdbc:mysql://localhost:3306/ dbnoteably
 #Setup datasource driver  – this is a comment
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Setup database login credentials  – this is a comment. 
 spring.datasource.username=root
-spring.datasource.password=Capstone860!
+spring.datasource.password=root
 
 #Auto create tables based on entities  – this is a comment
 spring.jpa.hibernate.ddl-auto = update
