--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Setup database login credentials  – this is a comment. 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 
 #Auto create tables based on entities  – this is a comment
 spring.jpa.hibernate.ddl-auto = update
