--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=NOTEably
 
-#Setup JDBC connection – this is a comment
+#Setup JDBC connection \u2013 this is a comment
 spring.datasource.url=jdbc:mysql://localhost:3306/ dbnoteably
-#Setup datasource driver  – this is a comment
+
+#Setup datasource driver  \u2013 this is a comment
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Setup database login credentials  – this is a comment. 
+#Setup database login credentials  \u2013 this is a comment. 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=password
 
-#Auto create tables based on entities  – this is a comment
+#Auto create tables based on entities  \u2013 this is a comment
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 
-#for stack trace error not to appear   – this is a comment
+#for stack trace error not to appear   \u2013 this is a comment
 server.error.include-stacktrace=never
-
