Final UI and updated Database :D

--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Setup database login credentials  – this is a comment. 
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 #Auto create tables based on entities  – this is a comment
 spring.jpa.hibernate.ddl-auto = update
@@ -16,3 +16,5 @@ spring.jpa.show-sql=true
 #for stack trace error not to appear   – this is a comment
 server.error.include-stacktrace=never
 
+# JUST ADDED FOR FORTUGALIZA's DEBUGGING
+server.port=8080
