--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -1,18 +1,21 @@
 spring.application.name=NOTEably
 
-#Setup JDBC connection \u2013 this is a comment
-spring.datasource.url=jdbc:mysql://localhost:3306/ dbnoteably
+# Setup JDBC connection
+spring.datasource.url=jdbc:mysql://localhost:3306/dbnoteably
 
-#Setup datasource driver  \u2013 this is a comment
+# Setup datasource driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Setup database login credentials  \u2013 this is a comment. 
+# Setup database login credentials
 spring.datasource.username=root
 spring.datasource.password=password
 
-#Auto create tables based on entities  \u2013 this is a comment
-spring.jpa.hibernate.ddl-auto = update
+# Auto create tables based on entities
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-#for stack trace error not to appear   \u2013 this is a comment
+# Set Hibernate dialect (optional)
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Suppress stack trace in error responses
 server.error.include-stacktrace=never
