--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/dbnoteably
 # Setup datasource driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Setup database login credentials
+#Setup database login credentials  – this is a comment. 
 spring.datasource.username=root
 spring.datasource.password=password
 
