changes wa na test

--- a/frontend/noteably/package.json
+++ b/frontend/noteably/package.json
@@ -17,11 +17,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "install": "^0.13.0",
+    "lodash": "^4.17.21",
+    "postcss": "^8.4.49",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-quill": "^0.0.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "resolve-url-loader": "^5.0.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
