--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 spring.application.name=noteably
 
-#Setup JDBC connection – this is a comment
+# CORS Configuration
+spring.mvc.cors.allowed-origins=http://localhost:3000
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.max-age=3600
+
 spring.datasource.url=jdbc:mysql://localhost:3306/dbnoteablytrial
 
 #Setup datasource driver  – this is a comment
