--- a/backend/noteably/pom.xml
+++ b/backend/noteably/pom.xml
@@ -55,6 +55,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+    		<groupId>net.coobird</groupId>
+    		<artifactId>thumbnailator</artifactId>
+    		<version>0.4.14</version>
+		</dependency>
+
 		
 	</dependencies>
 		
