--- a/backend/noteably/src/main/resources/application.properties
+++ b/backend/noteably/src/main/resources/application.properties
@@ -1,10 +1,12 @@
-spring.application.name=noteably
+# Existing properties...
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+file.upload-dir=uploads/profile-pictures
 
-# CORS Configuration
-spring.mvc.cors.allowed-origins=http://localhost:3000
-spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
+# Static Resource Configuration
+spring.mvc.static-path-pattern=/uploads/**
+spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.mvc.cors.max-age=3600
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dbnoteablytrial
