--- a/backend/noteably/pom.xml
+++ b/backend/noteably/pom.xml
@@ -29,7 +29,12 @@
 	<properties>
 		<java.version>21</java.version>
 	</properties>
-	<dependencies>
+<dependencies>
+    <dependency>
+        <groupId>org.mindrot</groupId>
+        <artifactId>jbcrypt</artifactId>
+        <version>0.4</version>
+    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
